--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="canvas">
     </div>
-    <script type = "text/javascript" src = "./dist/main.js"></script>
+    <script type = "text/javascript" src = "/btc/dist/main.js"></script>
 </body>
 
 </html>
