--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>BitcoinPredict</title>
-    <base href="/">
+    <style>
+        h1 {
+            color: #369;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 250%;
+        }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -16,7 +22,7 @@
     </div>
     <div id="canvas">
     </div>
-    <script type = "text/javascript" src = "/btc/dist/main.js"></script>
+    <script type = "text/javascript" src = "./dist/main.js"></script>
 </body>
 
 </html>
