--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div id="canvas">
     </div>
     <script type = "text/javascript" src = "./dist/main.js"></script>
+    <div id="canvas2">
+        </div>
+        <script type = "text/javascript" src = "./dist/main.js"></script>
 </body>
 
 </html>
