--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
 
 <body>
     <div style="text-align:center">
-        <h1>
+        <h1 id='iheader'>
             Bitcoin Prediction - gives you a better choice in life!
         </h1>
     </div>
     <div id="canvas">
     </div>
-    <script type = "text/javascript" src = "./dist/main.js"></script>
     <div id="canvas2">
-        </div>
-        <script type = "text/javascript" src = "./dist/main.js"></script>
+    </div>
+    <script type = "text/javascript" src = "./dist/main.js"></script>
 </body>
 
 </html>
